ARROW-4641: [C++][Flight] Suppress strict aliasing warnings from "unsafe" casts in client.cc

The type-casting trick we are using to sneak a different kind of object into `SerializationTraits<pb::FlightData>` looks like a `-Wstrict-aliasing` violation (which it would be, if any code tried to use the reference as the protobuf type)

Author: Wes McKinney <wesm+git@apache.org>

Closes #3719 from wesm/ARROW-4641 and squashes the following commits:

b7bded1f <Wes McKinney> Suppress -Wstrict-aliasing locally
45929ab3 <Wes McKinney> Do not warn about strict aliasing violations in Flight serialization paths